Blender 2.8: Make duplicates real does nothing. #58118

Closed
opened 2018-11-28 18:39:09 +01:00 by Mauricio Marinho · 13 comments

System Information
Ubuntu 18.04
GTX 970 4gb
i7-8700k

Blender Version
Broken: (example: 2.8 2018-11-28 6fd5f95call)
Worked: (optional)

Short description of error
Convert button in particle systems with objects for hairs does nothing (couldn't find any report on it yet, sorry if duplicate)

Exact steps for others to reproduce the error
Add cube as emitter, add particle system to it and set it to hair, make it render objects as strands. Click convert on the particle modifier or use "Make duplicates real" operator.
makeduplicatesrealbug.blend

**System Information** Ubuntu 18.04 GTX 970 4gb i7-8700k **Blender Version** Broken: (example: 2.8 2018-11-28 6fd5f95call) Worked: (optional) **Short description of error** Convert button in particle systems with objects for hairs does nothing (couldn't find any report on it yet, sorry if duplicate) **Exact steps for others to reproduce the error** Add cube as emitter, add particle system to it and set it to hair, make it render objects as strands. Click convert on the particle modifier or use "Make duplicates real" operator. [makeduplicatesrealbug.blend](https://archive.blender.org/developer/F5746505/makeduplicatesrealbug.blend)

Added subscriber: @MauricioMarinho

Added subscriber: @MauricioMarinho

#58282 was marked as duplicate of this issue

#58282 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...
Sergey Sharybin was assigned by Philipp Oeser 2018-11-29 15:24:42 +01:00
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

Looks like a problem with base->object->transflag

On file load this gets set once in BKE_object_handle_data_update()

  • ob->transflag |= OB_DUPLIPARTS;

in get_dupli_generator() (for info stats)

  • ob->transflag is still 2048

But then in object_duplicates_make_real_exec():

  • if I check CTX_data_active_object(C)->transflag it is 0
  • thus in selected_editable_bases iterator: base->object->transflag is 0

Thus it earlies out in make_object_duplilist_real():

if (!(base->object->transflag & OB_DUPLI)) {
	return;
}

@Sergey: could you check on this?

Looks like a problem with `base->object->transflag` On file load this gets set once in `BKE_object_handle_data_update()` - `ob->transflag |= OB_DUPLIPARTS;` in `get_dupli_generator()` (for info stats) - ob->transflag is still 2048 But then in `object_duplicates_make_real_exec()`: - if I check `CTX_data_active_object(C)->transflag` it is 0 - thus in selected_editable_bases iterator: `base->object->transflag` is 0 Thus it earlies out in `make_object_duplilist_real()`: ``` if (!(base->object->transflag & OB_DUPLI)) { return; } ``` @Sergey: could you check on this?
Member

Added subscriber: @Adrian.kubasa

Added subscriber: @Adrian.kubasa

Added subscriber: @JanKopidol

Added subscriber: @JanKopidol

Also maybe related to this issue ...

Also maybe related to [this issue ](https://developer.blender.org/T58481) ...

Added subscriber: @kirberoid

Added subscriber: @kirberoid

Removed subscriber: @kirberoid

Removed subscriber: @kirberoid

This issue was referenced by cf2e35fcfe

This issue was referenced by cf2e35fcfe31aa2c1836f51d1206901b4be6aeba

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
6 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#58118
No description provided.