source/blender/depsgraph/intern/nodes/deg_node_component.cc
@@ -401,6 +401,7 @@ DEG_COMPONENT_NODE_DEFINE(ShadingParameters, SHADING_PARAMETERS, ID_RECALC_DRAW)
 DEG_COMPONENT_NODE_DEFINE(Transform,         TRANSFORM,          ID_RECALC_TRANSFORM);
 DEG_COMPONENT_NODE_DEFINE(ObjectFromLayer,   OBJECT_FROM_LAYER,  ID_RECALC);
 DEG_COMPONENT_NODE_DEFINE(Dupli,             DUPLI,              0);
+DEG_COMPONENT_NODE_DEFINE(Synchronize,       SYNCHRONIZE,        0);
 
 /* Node Types Register =================================== */
 
@@ -424,6 +425,7 @@ void deg_register_component_depsnodes()
 	deg_register_node_typeinfo(&DNTI_TRANSFORM);
 	deg_register_node_typeinfo(&DNTI_OBJECT_FROM_LAYER);
 	deg_register_node_typeinfo(&DNTI_DUPLI);
+	deg_register_node_typeinfo(&DNTI_SYNCHRONIZE);
 }
 
 }  // namespace DEG
